--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ markdown: kramdown
 # so be sure to set them if your theme uses them.
 #
 title : YouZhang
-tagline: SHU AMD ALU
+tagline: SHU Intel AMD ALU
 author :
   name : You Zhang
   email : youzhang@shu.edu.cn
